ASM-2825 Refactor: Consolidate JSON mapper and RestTemplate configurations into `ApplicationConfig`, clean up unused classes, and refactor tests and services for enhanced consistency and dependency injection